crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__daemon_stop_not_running__plain.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format plain daemon stop
exit: 0
--- stdout ---
Daemon: not running
--- stderr ---
