crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__daemon_stop_not_running__pretty.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format pretty daemon stop
exit: 0
--- stdout ---
Daemon: not running
--- stderr ---
